Updates from Overleaf

--- a/4-point.tex
+++ b/4-point.tex
@@ -39,7 +39,7 @@ Let $\bm{x}\z=(x_1,\dots,x_n)$ be an $n$-point array in a metric space $X$ and l
 An inequality of the following type
 \[\sum_{i,j}a_{i,j}\cdot|x_i-x_j|_X^2\ge 0\]
 will be called \emph{quadratic}.
-A system of quadratic intequalities will be called \emph{quadratic condition}.
+A system of quadratic inequalities will be called \emph{quadratic condition}.
 
 We will be interested in length spaces $X$ such that a given quadratic condition holds for any $n$-point array in a metric space $X$.
 
@@ -112,7 +112,7 @@ The space of quadratic forms over $V_n$ will be denoted by $W_n$;
 it is the symmetric square of $V_n=V_n^*$, and can be written as $W_n=S^2(V_n^*)=S^2(V_n)$.
 
 Any quadratic inequality described above defines linear inequalities on $W_n$, so they can be written as $\langle\omega,\rho_{\bm{x}}\rangle\ge 0$ for a fixed $\omega\in W_n$.
-Therefore the set of solutions of any system of quadratic inequalities (finite or infinite) is a closed convex cone in $W_n$, say $K$;
+Therefore, the set of solutions of any system of quadratic inequalities (finite or infinite) is a closed convex cone in $W_n$, say $K$;
 that is, $K$ is a nonempty closed set such that if $v,w\in K$, then $a\cdot v+b\cdot w\in K$ for any $a,b\ge0$.
 Denote by $\mathcal{M}_K$ the class of all length spaces $X$ such that
 $\rho_{\bm{x}}\in K$ for any $n$-point array $\bm{x}\z=(x_1,\dots,x_n)$ in $X$.
@@ -149,7 +149,7 @@ The last statement is evident, and it implies the first statement.
 Indeed, for any sequence of spaces $X_n$ in $\mathcal{M}_K$, its ultralimit $X_\omega$ also belongs to $\mathcal{M}_K$.
 Therefore, given a sequence of point arrays $\bm{x}_n$ in $X_n$,
 its ultralimit $\bm{x}_\omega$ in $X_\omega$ has limit distances between corresponding points.
-Hence the result.
+Hence, the result.
 \qeds
 
 \begin{thm}{Proposition}\label{prop:Associated form}
@@ -192,7 +192,7 @@ A given point array $\bm{x}=(x_1,\dots,x_n)$ is isometric to an array in a Eucli
 \end{thm}
 
 An inequality of type $\rho_{\bm{x}}(v)\ge 0$ for a fixed vector $v\in V_n$ will be called \emph{rank-one} inequality.
-It belongs to the class of quadratic inequalities
+It belongs to the class of quadratic inequalities.  
 In the notation of Section~\ref{par:quadratic-inq}, it means that $a_{i,j}=-\lambda_i\cdot\lambda_j$ for a real array $(\lambda_1,\dots, \lambda_n)$ such that
 $\lambda_1+\dots+\lambda_n=0$.
 Such inequalities are also known as inequalities of \emph{negative type} \cite{deza-lauren}.
@@ -203,7 +203,7 @@ Since changing the signs of all $\lambda_i$ does not change the inequality, we c
 \section{Four-point arrays}\label{Four-point arrays}
 
 For $4$-point arrays, we have two interesting types of rank-one inequalities: negative type $(2,2)$ and $(3,1)$.
-The type $(1,1)$ is trivial and
+The type $(1,1)$ is trivial, and
 the type $(2,1)$ follows from the triangle inequality.
 In fact, all the triangle inequalities (we have 12 of them for 4 points) are equivalent to all inequalities of negative type $(2,1)$ (which is an infinite set).
 
@@ -224,7 +224,7 @@ Equivalently, this inequality is of negative type $(2,2)$ if $v$ points from one
 If a vector $v$ is parallel to a facet of $\triangle$, then $\rho_{\bm{x}}(v)\ge 0$ is an inequality of negative type $(2,1)$, which follows from the triangle inequality.
 The picture shows the hemisphere.
 The labels on the edges indicate which triangle inequality becomes an equality when $\rho_{\bm{x}}$ vanishes at a vector on that edge;
-for example, label $123$ means that
+for example, the label $123$ means that
 \[|x_1-x_2|+|x_2-x_3|=|x_1-x_3|.\]
 If $\rho_{\bm{x}}$ vanishes on the intersection of equators, then two points in the array have to coincide;
 the label shows which pair.
@@ -248,7 +248,7 @@ Since the tripod $Y$ has nonpositive curvature, and $\mathbb{S}^1$ has nonnegati
 A 4-point metric space $X$ is isometric to a subset of a length space with nonnegative (nonpositive) curvature in the sense of Alexandrov if and only if all inequalities of negative type $(3, 1)$ (respectively, type $(2, 2)$) hold in $X$.
 \end{thm}
 
-A five-point versions of this corollary have been proved by Tetsu Toyoda \cite{toyoda,lebedeva-petrunin2021} and the first two authors \cite{lebedeva-petrunin-2024}, respectively.
+Five-point versions of this corollary have been proved by Tetsu Toyoda \cite{toyoda,lebedeva-petrunin2021} and the first two authors \cite{lebedeva-petrunin-2024}, respectively.
 
 \parit{Proof of \ref{prop:Four-point arrays}.}
 Let us enumerate points in $X$ and let $\rho$ be the associated form on $V_4$.
@@ -265,7 +265,7 @@ By \ref{obs:rank-one}, $X$ isometrically embeds into $\tilde X\times \RR^3$.
 Hence it is sufficient to show that $\tilde X$ embeds into $Y$, or, respectively, into $r\cdot \mathbb{S}^1$ for some $r>0$.
 
 Let $N\subset \mathbb{S}^2$ be a set where $\tilde\rho$ is negative and let $\bar N$ be its closure.
-The set $N$ is nonempty; otherwise we are in the case $\rho\ge 0$, which is already covered.
+The set $N$ is nonempty; otherwise, we are in the case $\rho\ge 0$, which is already covered.
 
 Since all $(2,1)$-inequalities hold for $\tilde\rho$,
 it must be nonnegative on 4 equators $e_1,e_2,e_3,e_4$ in the directions of facets of $\triangle$.
@@ -322,7 +322,7 @@ Suppose $K\subset W_4$ is defined by a single rank-one inequality on $4$-point a
 
 \end{thm}
 
-Combining this statement with Corollary~\ref{cor:Four-point arrays} gives that imposing a single inequality inequality of negative type $(2,2)$ or $(3,1)$ on a length space implies \emph{all} inequalities of the same type, which is much stronger and might be surprising at first.
+Combining this statement with Corollary~\ref{cor:Four-point arrays} gives that imposing a single inequality of negative type $(2,2)$ or $(3,1)$ on a length space implies \emph{all} inequalities of the same type, which are much stronger and might be surprising at first.
 
 \parit{Proof.}
 Our inequality can be written as 
@@ -353,7 +353,7 @@ as before, we assume that the $\bm{x}$-arrays are in general position --- no thr
 So we can describe our inequality by a 4-point array in general position.
 If the points of the array lie at the vertices of a convex quadrangle,
 then it corresponds to an inequality of type $(2,2)$.
-If one of the points lies inside of the triangle formed by the remaining points, then it corresponds to an inequality of type $(3,1)$.
+If one of the points lies inside the triangle formed by the remaining points, then it corresponds to an inequality of type $(3,1)$.
 
 \begin{figure}[ht!]
 \vskip-0mm
@@ -383,7 +383,7 @@ Then the second inequality also holds.
 
 Indeed, passing to the ultracompletion, we may assume that $X$ is geodesic.
 Choose 4 points $x_1,x_2,x_3,x_5\in X$ and let $x_4$ be a point on a geodesic $[x_3x_5]$ that divides it in the same ratio as in the 5-point configuration in the plane.
-If we sum up the first inequality for arrays $x_1,x_2,x_3,x_4$ and $x_1,x_2,x_4,x_5$ with with the appropriate coefficients, then we get the second inequality for $x_1,x_2,x_3,x_5$.
+If we sum up the first inequality for arrays $x_1,x_2,x_3,x_4$ and $x_1,x_2,x_4,x_5$ with the appropriate coefficients, then we get the second inequality for $x_1,x_2,x_3,x_5$.
 
 By the claim, the inequality for $\lambda$-array $(\alpha\cdot (1-\beta),(1-\alpha)\cdot(1\z-\beta), \beta,-1)$ implies the inequality for the $\lambda$-array $(\alpha\cdot (1-\beta^2), (1-\alpha)\cdot(1-\beta^2), \beta^2,-1)$.
 Applying the claim several times, we get all the inequalities with $\lambda$-arrays
@@ -410,7 +410,7 @@ Let us apply \ref{eq:lambda-inq}
 \includegraphics{mppics/pic-15}
 \vskip0mm
 \end{figure}
-to a quadruple $x_1,x_2,x_3,x_4\in X$ such that $x_1$, $x_2$ and $x_4$ lie on one geodesic and we have equality in the $(2,1)$-inequality with $\lambda$-array
+to a quadruple $x_1,x_2,x_3,x_4\in X$ such that $x_1$, $x_2$ and $x_4$ lie on one geodesic, and we have equality in the $(2,1)$-inequality with $\lambda$-array
 \[(\alpha,\  (1-\alpha),\ 0,\ -1);\]
 that is,
 \[\alpha\cdot (1-\alpha)\cdot|x_1-x_2|^2-\alpha\cdot |x_1-x_4|^2-(1-\alpha)\cdot |x_2-x_4|^2=0.\eqlbl{eq:trig-inq}\]
@@ -434,7 +434,7 @@ Together with any value $\xi$, this set contains $1-\xi$ and $\xi^k$ for any int
 Observe that this set is dense in $(0,1)$.
 Therefore, inequality \ref{eq:CBB-CBA} holds for any $\alpha\in (0,1)$.
 This is equivalent to the point-on-side comparison for nonnegative curvature; see \cite[8.14]{AKP-2024}.
-Similarly one can show that if the inequality holds for some $\alpha>1$, then it holds for any $\alpha>1$,
+Similarly, one can show that if the inequality holds for some $\alpha>1$, then it holds for any $\alpha>1$,
 and this is equivalent to the point-on-side comparison for nonpositive curvature; see \cite[9.14]{AKP-2024}.
 \qeds
 
@@ -468,7 +468,7 @@ for any circle $r\cdot \mathbb{S}^1$ with $r>0$, and hence also for any product 
 It remains to apply \ref{prop:Four-point arrays}.
 \qeds
 
-In the following proof we will use a statement form the next section.
+In the following proof, we will use a statement from the next section.
 
 \parit{Proof of the theorem.}
 Let us denote by $K_0$ the cone in $W_4$ described by all inequalities of negative type $(3,1)$ and $(2,1)$.
@@ -481,7 +481,7 @@ Note that $K_0\z\subset K_\delta$.
 Furthermore, after rescaling the metric on $\{x_1,x_2,x_3,x_4\}$ with a factor of $\tfrac1\delta$, the array gets diameter at most $1$ and is embeddable in an Alexandrov space with curvature at least $-\delta^2$; therefore, $K_0=\bigcap_{\delta>0} K_\delta$ (see also Lemma~\ref{lem:area-bound}).
 
 Every Riemannian manifold admits a local curvature bound at each point.
-In particular, after appropriate rescaling, a small neighborhood of any point of Riemannian manifold has curvature at least $-1$.
+In particular, after appropriate rescaling, a small neighborhood of any point of a Riemannian manifold has curvature at least $-1$.
 Therefore, any compact Riemannian manifold satisfies local $K_\delta$-comparison.
 
 Suppose $K\supset K_\delta$ for some $\delta>0$.
@@ -495,7 +495,7 @@ Since $K$ is closed, it contains forms associated to all metrics on 4-point set;
 so $K$ is defined only by the triangle inequalities, and the $K$-comparison is trivial.
 
 From now on, we can assume that for any $\delta>0$ there is a form $\theta\in K_\delta\setminus K$.
-By \ref{cor:squared-sides}, we can choose a $(3,1)$-inequality with the $\lambda$-array of this inequality has form $(\lambda_1,\lambda_2,\lambda_3,-1)$ such that
+By \ref{cor:squared-sides}, we can choose a $(3,1)$-inequality with the $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,-1)$ such that
 \[\begin{aligned}
 \sum_{i,j}&\lambda_i\cdot\lambda_j\cdot|x_i-x_j|_X^2
 \le
@@ -525,7 +525,7 @@ it defines an inequality of negative type $(2,1)$.
 Note that
 \[\bm{\lambda}_n=(\alpha_n\cdot(1-\beta_n),(1-\alpha_n)\cdot(1-\beta_n),\beta_n,-1),\]
 for some sequences $\alpha_n\to\alpha$ and $\beta_n\to 0^+$ as $n\to\infty$.
-Applying the same calculations as in the proof of \ref{prop:Alexandrov's comparison} to these inequalities and passing to the limit we get
+Applying the same calculations as in the proof of \ref{prop:Alexandrov's comparison} to these inequalities and passing to the limit, we get
 \[
 \alpha\cdot|x_1-x_3|^2+(1-\alpha)\cdot|x_2-x_3|^2-\alpha\cdot (1-\alpha)\cdot|x_1-x_2|^2
 \le
@@ -587,7 +587,7 @@ By the Kirszbraun theorem,
 \[a\le \tilde a.\]
 Since the hyperbolic plane has curvature $-1$, we have
 \[\pi-\angk{x_1}{x_2}{x_3}_{\HH^2}-\angk{x_2}{x_3}{x_1}_{\HH^2}-\angk{x_3}{x_1}{x_2}_{\HH^2}=a.\]
-Applying these inequalities with the comparison, we get
+By these inequalities and the comparison, we get
 \begin{align*}
 0&\le \angk{x_1}{x_2}{x_3}_{\EE^2}-\angk{x_1}{x_2}{x_3}_{\HH^2}\le \tilde a.
 \intertext{Since $x_4$ lies in the solid hyperbolic triangle with vertices $x_1$, $x_2$ and $x_3$, we also have $\angk{x_1}{x_2}{x_4}_{\HH^2}+\angk{x_1}{x_4}{x_3}_{\HH^2}=\angk{x_1}{x_2}{x_3}_{\HH^2}$. Hence, the comparison also implies}
@@ -663,7 +663,7 @@ The inequalities $\rho_{\bm{x}}(v)\ge 0$ and
 $\rho_{\bm{x}}(w)\ge 0$ are of type $(2,1)$;
 they follow from the triangle inequality, so we always have that $\rho_{\bm{x}}(v)\ge 0$ and
 $\rho_{\bm{x}}(w)\ge 0$.
-Moreover the values $\rho_{\bm{x}}(v)$ and $\rho_{\bm{x}}(w)$ depend only on sides of triangle $[x_1x_2x_3]$.
+Moreover, the values $\rho_{\bm{x}}(v)$ and $\rho_{\bm{x}}(w)$ depend only on sides of triangle $[x_1x_2x_3]$.
 
 Since
 \begin{align*}
@@ -673,7 +673,7 @@ Since
 &
 \theta(w)&\ge0,
 \end{align*}
- we have that $u$ points in a direction of $N$.
+we have that $u$ points in a direction of $N$.
 Therefore, $\rho_{\bm{x}}(u)\ge0$ is an inequality of negative type $(3,1)$.
 
 Suppose that the array $(x_1,x_2,x_3,x_4)$ is equipped with a metric such that its associated form is $\theta$.
@@ -684,8 +684,8 @@ Since $\delta$ is small, \ref{lem:area-bound} implies that
 \le
 13\cdot\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\tilde a^2.\]
 Note that $\theta(v)=\eps_v\cdot \tilde d_v^2$ and $\theta(w)=\eps_w\cdot \tilde d_w^2$, where
-$\tilde d_v$ and $\tilde d_w$ are distances from a vertex of the model triangle $\tilde\triangle(x_1x_2x_3)_{\EE^2}$ to a point that divide the opposite side in a certain ratio and $\eps_v,\eps_w\ge 0$,
-Since diameter of $\tilde\triangle(x_1x_2x_3)$ is at most $\delta$,
+$\tilde d_v$ and $\tilde d_w$ are distances from a vertex of the model triangle $\tilde\triangle(x_1x_2x_3)_{\EE^2}$ to a point that divides the opposite side in a certain ratio and $\eps_v,\eps_w\ge 0$,
+Since the diameter of $\tilde\triangle(x_1x_2x_3)$ is at most $\delta$,
 \begin{align*}
 \tilde a&\le \delta\cdot \tilde d_v/2,
 \\
@@ -707,8 +707,8 @@ Some candidates can be found in our earlier paper \cite{lebedeva-petrunin-zoloto
 Also, it might be possible to prove a version of our globalization theorem
 for simply connected spaces, which includes the Cartan--Hadamard theorem.
 
-For general (closed) conditions on semimetrics on $n$-point arrays, globalization holds of course for curvature bounded below by $\kappa\in \RR$ in the sense of Alexandsrov,
-but it holds for other condition as well;
+For general (closed) conditions on semimetrics on $n$-point arrays, globalization holds of course for curvature bounded below by $\kappa\in \RR$ in the sense of Alexandrov,
+but it holds for other conditions as well;
 the set of semimetrics on $4$-point arrays that are embeddable in $r\cdot\SSS^1$ for any $r>0$ gives an example.
 Understanding globalization phenomena in such general settings seems to be out of reach at the moment.
 
