--- a/4-point.tex
+++ b/4-point.tex
@@ -609,7 +609,7 @@ That is, decreasing $|x_2-x_3|^2$ by
 \le
 \\
 \le\
-&2\cdot|x_1-x_2|\cdot|x_1-x_3|\cdot (\tilde a\cdot\sin\phi+\tfrac12\cdot\tilde a^2\cdot\cos\phi)
+&2\cdot|x_1-x_2|\cdot|x_1-x_3|\cdot (\tilde a\cdot\sin\phi+\tfrac12\cdot\tilde a^2)
 \le
 \\
 \le\ &(4+\delta^2)\cdot \tilde a^2
