realize the graph

--- a/4-point.tex
+++ b/4-point.tex
@@ -488,7 +488,7 @@ Suppose $K\supset K_\delta$ for some $\delta>0$.
 Since globalization holds for $K$, the class $\mathcal{M}_K$ contains all compact Riemannian manifolds.
 Every finite metric graph can be approximated by compact Riemannian manifolds;
 to prove it,
-embed the graph isometrically into Euclidean space and take the boundary of an appropriate neighborhood.
+realize the graph in Euclidean space with smooth edges of the same length and take the boundary of an appropriate neighborhood.
 (A way stronger result is proved by Vedrin Šahović in his thesis \cite{sahovic2009}.)
 Any metric on $\{x_1,x_2,x_3,x_4\}$ admits a distance-preserving embedding into a metric graph, so $K$ contains a form near the associated form for any semimetric on $\{x_1,x_2,x_3,x_4\}$.
 Since $K$ is closed, it contains forms associated to all metrics on 4-point set;
