--- a/4-point.tex
+++ b/4-point.tex
@@ -440,7 +440,7 @@ and this is equivalent to the point-on-side comparison for nonpositive curvature
 
 \section{Globalization}\label{par:globalization}
 
-Let $K\subset W_4$ be a closed convex cone.
+Let $K\subset W_n$ be a closed convex cone.
 We say that a metric space $X$ meets \emph{local $K$-comparison} if any point $x\in X$ admits a neighborhood $U$ such that $K$-comparison holds for any $n$-point array in $U$.
 
 If local $K$-comparison implies $K$-comparison for any length space, then we say that \emph{globalization holds} for $K$.
