--- a/4-point.tex
+++ b/4-point.tex
@@ -41,45 +41,36 @@ An inequality of the following type
 will be called \emph{quadratic}.
 A system of quadratic inequalities will be called \emph{quadratic condition}.
 
-We will be interested in length spaces $X$ such that a given quadratic condition holds for any $n$-point array in a metric space $X$.
-
-As we will see, quadratic conditions can be used to define  nonnegative and nonpositive curvature in the sense of Alexandrov.
-This observation motivated us to investigate the entire class of such inequalities for $n=4$.
-We certainly want to tackle the case $n>4$, but only after the simpler case $n=4$.
+We will be interested in length spaces $X$ such that a given quadratic condition holds for any $n$-point array in $X$.
 
 \section{Outline}
 
-Sections \ref{Associated form} and \ref{par:rank-one} introduce necessary definitions.
-Here we define
-the
-associated quadratic form for a point array and inequalities of negative type, a special class of quadratic inequalities with $a_{i,j}=-\lambda_i\cdot\lambda_j$ for a real array $(\lambda_1,\dots, \lambda_n)$ such that $\lambda_1+\dots+\lambda_n=0$.
-We also prove several basic statements that are valid for all $n$-point arrays.
-
-The rest of the paper deals with $4$-point arrays.
-In Section~\ref{par:globalization}, we show that the globalization theorem holds only for Alexandrov spaces with nonnegative curvature.
-
-\begin{thmA}{Statement}
+\begin{thm}{Main theorem}
 Suppose that a quadratic condition on 4-points satisfies the globalization property;
 that is, if this condition holds locally (in a neighborhood of any point) in a length space $X$ then it holds in $X$.
 Then either the condition is trivial, or it describes Alexandrov spaces with nonnegative curvature.
-\end{thmA}
+\end{thm}
 
-This statement essentially says that the Toponogov theorem has no simple relatives.
-The rest of the paper has auxiliary nature, but let us list two results that have independent interest.
+This statement is proved in Section~\ref{par:globalization}.
+It says that the Toponogov theorem has no simple relatives.
+The rest of the paper has auxiliary nature.
+We will state two results that have independent interest.
+Their formulation use \emph{inequalities of negative type} --- a special case of quadratic inequalities with $a_{i,j}=-\lambda_i\cdot\lambda_j$ for a real array $(\lambda_1,\dots, \lambda_n)$ such that $\lambda_1+\dots+\lambda_n=0$; see Section~\ref{par:rank-one}.
+
 In Section~\ref{Four-point arrays}, we prove the following version of a theorem of Abraham Wald \cite[§ 7]{wald} that describes the metrics of all possible 4-point arrays in Alexandrov spaces with nonnegative and nonpositive curvature.
 
-\begin{thmA}{Statement}
+\begin{thm}{Proposition}
 The following three conditions are equivalent:
 \begin{enumerate}[(i)]
 \item A 4-point metric space $X$ is isometric to a subset of a length space with nonnegative (nonpositive) curvature in the sense of Alexandrov.
 \item $X$ is isometric to a subset in the product of $\RR^3\times r\cdot \SSS^1$ for some $r>0$ (respectively, $\RR^3\times Y$, where $Y$ denotes the tripod; that is, three half-lines with a common base point)
-\item All inequalities of negative type inequalities of negative type with $\lambda$-arrays such that $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4<0$ (respectively, type $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4>0$) hold in hold in $X$.
+\item All inequalities of negative type with $\lambda$-arrays such that $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4<0$ (respectively, type $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4>0$) hold in hold in $X$.
 \end{enumerate}
-\end{thmA}
+\end{thm}
 
-Further, in Section~\ref{Alexandrov's comparison} we prove that a single nondegenerate inequality of negative type defines Alexandrov spaces with nonnegative and nonpositive curvature.
+In Section~\ref{Alexandrov's comparison} we prove that a single nondegenerate inequality of negative type defines Alexandrov spaces with nonnegative and nonpositive curvature.
 
-\begin{thmA}{Statement}
+\begin{thm}{Proposition}
 Let us consider all length spaces that satisfy the quadratic condition given by an inequality of negative type $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,\lambda_4)$.
 \begin{enumerate}[(i)]
 \item If $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4<0$, then it describes all Alexandrov spaces with nonnegative curvature.
@@ -87,12 +78,17 @@ Let us consider all length spaces that satisfy the quadratic condition given by 
 \item If $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4=0$, then it gives no restrictions; it describes all length spaces.
 \end{enumerate}
 
-\end{thmA}
+\end{thm}
 
-This statement shows that we might impose a relatively weak form 4-point comparison on a space with length metric that forces a much stronger 4-point comparison.
+This statement shows that a relatively weak form of 4-point comparison  forces a much stronger 4-point comparison.
 The proof is a straightforward combination of the arguments by Takashi Sato \cite{sato} and its variation by the first two authors \cite{lebedeva-petrunin-2010};
 these papers consider particular cases
 such inequalities, namely those for the $\lambda$-arrays $(1,1,-1,-1)$ and $(1,1,1,-3)$.
+
+Sections \ref{Associated form} and \ref{par:rank-one} introduce necessary definitions.
+Here we define the associated quadratic form for a point array and inequalities of negative type.
+We also prove several basic statements that are valid for all $n$-point arrays.
+Section \ref{Auxiliary statements} provides a technical statemet for the proof of the main theorem.
 
 \section{Associated form}\label{Associated form}
 
@@ -105,22 +101,26 @@ for all indices $i$ and $j$.
 The quadratic form $\rho_{\bm{x}}$ will be called the \emph{associated form} of $\bm{x}=(x_1,\z\dots,x_n)$;
 it is uniquely defined and remembers all distances $|x_i-x_j|_X$
 (we assume that the simplex $\triangle$ in $V_n$ is known).
-We may not distinguish between a semimetric on a point array and its associated form.
+We may not distinguish between associated form $\rho_{\bm{x}}$ and corresponding semimetric on $\bm{x}=(x_1,\dots,x_n)$.
 
 The Euclidean structure on $V_n$ identifies it with $V_n^*$.
 The space of quadratic forms over $V_n$ will be denoted by $W_n$;
 it is the symmetric square of $V_n=V_n^*$, and can be written as $W_n=S^2(V_n^*)=S^2(V_n)$.
 
 Any quadratic inequality described above defines linear inequalities on $W_n$, so they can be written as $\langle\omega,\rho_{\bm{x}}\rangle\ge 0$ for a fixed $\omega\in W_n$.
-Therefore, the set of solutions of any system of quadratic inequalities (finite or infinite) is a closed convex cone in $W_n$, say $K$;
+Therefore, any quadratic  condition defines a closed convex cone in $W_n$, say $K$;
 that is, $K$ is a nonempty closed set such that if $v,w\in K$, then $a\cdot v+b\cdot w\in K$ for any $a,b\ge0$.
 Denote by $\mathcal{M}_K$ the class of all length spaces $X$ such that
-$\rho_{\bm{x}}\in K$ for any $n$-point array $\bm{x}\z=(x_1,\dots,x_n)$ in $X$.
+$\rho_{\bm{x}}\in K$ for any $n$-point array $\bm{x}\z=(x_1,\dots,x_n)$ in~$X$.
 The class $\mathcal{M}_K$ respects distance-preserving embeddings; that is,
 if there is a distance-preserving embedding $X\to Y$ between length spaces and $Y \in  \mathcal{M}_K$, then $X\in \mathcal{M}_K$.
 
-Suppose $X,Y\in  \mathcal{M}_K$ and $a\ge 0$.
-Since $K$ is a convex cone,  $X\times Y$ and $a\cdot X$ are in $\mathcal{M}_K$;
+Since $K$ is a convex cone,
+\[X,\ Y\in  \mathcal{M}_K
+\qquad\Longrightarrow\qquad
+X\times Y,\ a\cdot X\in\mathcal{M}_K
+\]
+for any $a\ge 0$;
 here $X\times Y$ denotes the $\ell_2$-product of metric spaces, and
 $a\cdot X$ denotes the rescaled copy of $X$ with factor $a$.
 
@@ -128,7 +128,7 @@ The last observation can be used in the opposite direction as well.
 It gives that all forms $\rho_{\bm{x}}$ for point arrays $\bm{x}$ in $\mathcal{M}_K$-spaces form a convex cone, say $K'$.
 
 Evidently $K'\subset K$, and this inclusion might be strict.
-The first reason comes from the triangle inequality, which is equivalent to $\rho_{\bm{x}}(w)\ge 0$ for any vector $w$ in a 2-face of $\triangle$.
+The first reason comes from the triangle inequality, which is equivalent to $\rho_{\bm{x}}(w)\ge 0$ for any vector $w$ in a 2-faces of $\triangle$.
 These inequalities must hold for any form in $K'$.
 Furthermore, if $\rho_{\bm{x}}\in K'$, then $\rho_{\hat{\bm{x}}}\in K'$ for any $n$-point array $\hat{\bm{x}}$ made from the points of $\bm{x}$; in particular $\hat{\bm{x}}$ might be a permutation of points in $\bm{x}$.
 
@@ -248,12 +248,10 @@ Since the tripod $Y$ has nonpositive curvature, and $\mathbb{S}^1$ has nonnegati
 A 4-point metric space $X$ is isometric to a subset of a length space with nonnegative (nonpositive) curvature in the sense of Alexandrov if and only if all inequalities of negative type $(3, 1)$ (respectively, type $(2, 2)$) hold in $X$.
 \end{thm}
 
-Five-point versions of this corollary have been proved by Tetsu Toyoda \cite{toyoda,lebedeva-petrunin2021} and the first two authors \cite{lebedeva-petrunin-2024}, respectively.
+The corresponding five-point versions of this corollary have been proved by Tetsu Toyoda \cite{toyoda,lebedeva-petrunin2021} and the first two authors \cite{lebedeva-petrunin-2024}, respectively.
 
 \parit{Proof of \ref{prop:Four-point arrays}.}
-Let us enumerate points in $X$ and let $\rho$ be the associated form on $V_4$.
-If $\rho\ge 0$, then $X$ is isometric to a 4-point subset of the Euclidean 3-space,
-and the proposition follows.
+Let us enumerate points in $X$ and let $\rho$ be the associated form on~$V_4$.
 
 Choose a minimal form $\tilde\rho\le \rho$ such that all $(2,1)$-inequalities hold for $\tilde\rho$;
 here $\tilde\rho\le \rho$ means that $\tilde\rho(v)\le \rho(v)$ for any vector $v$.
@@ -265,10 +263,11 @@ By \ref{obs:rank-one}, $X$ isometrically embeds into $\tilde X\times \RR^3$.
 Hence it is sufficient to show that $\tilde X$ embeds into $Y$, or, respectively, into $r\cdot \mathbb{S}^1$ for some $r>0$.
 
 Let $N\subset \mathbb{S}^2$ be a set where $\tilde\rho$ is negative and let $\bar N$ be its closure.
-The set $N$ is nonempty; otherwise, we are in the case $\rho\ge 0$, which is already covered.
+We can assume that $N$ is nonempty; otherwise,
+$\rho\ge 0$ and by \ref{obs:rank-one}, the space $X$ is isometric to a 4-point subset of the Euclidean 3-space.
 
-Since all $(2,1)$-inequalities hold for $\tilde\rho$,
-it must be nonnegative on 4 equators $e_1,e_2,e_3,e_4$ in the directions of facets of $\triangle$.
+Since all $(2,1)$-inequalities hold for $\tilde\rho$, the form $\tilde\rho$
+must be nonnegative on 4 equators $e_1,e_2,e_3,e_4$ in the directions of facets of $\triangle$.
 Since $\tilde\rho$ is minimal, $\bar N$ has to touch $e_i$ at least at 3 directions (up to sign). 
 If not, then there is a linear function, say $\sigma$, that vanishes at all common points of $\bar N$ and $e_i$ for all $i$.
 In this case, consider the form $\tilde\rho-\eps\cdot \sigma^2$ for small $\eps>0$;
@@ -286,16 +285,16 @@ According to the diagram above, after relabeling, we can assume that
 \\
 |x_3-x_1|&=|x_3-x_4|+|x_4-x_1|.
 \end{align*}
-In this case, the array can be embedded into $Y$.
+In this case, the array can be embedded into the tripod $Y$.
 
 In the case of a quadrangle, $\bar N$ touches at least three of its sides, but might touch all four.
-The diagram shows that we may, after relabeling, assume that
+Look at the diagram and convince yourself, that after relabeling, we may assume that
 \begin{align*}
 |x_1-x_4|&=|x_1-x_2|+|x_2-x_4|=|x_1-x_3|+|x_3-x_4|,
 \\
 |x_2-x_3|&=|x_2-x_4|+|x_4-x_3|.
 \end{align*}
-(If it touches all sides, then in addition we have $|x_2-x_3|=|x_2-x_1|+|x_1-x_3|$.)
+If it touches all sides, then in addition we have $|x_2-x_3|=|x_2-x_1|+|x_1-x_3|$.
 In any case, the array can be embedded into $r\cdot \mathbb{S}^1$, where $r=|x_1-x_4|/\pi$;
 so the points $x_1$ and $x_4$ are antipodal in $r\cdot \mathbb{S}^1$.
 \qeds
@@ -322,7 +321,7 @@ Suppose $K\subset W_4$ is defined by a single rank-one inequality on $4$-point a
 
 \end{thm}
 
-Combining this statement with Corollary~\ref{cor:Four-point arrays} gives that imposing a single inequality of negative type $(2,2)$ or $(3,1)$ on a length space implies \emph{all} inequalities of the same type, which are much stronger and might be surprising at first.
+This statement and Corollary~\ref{cor:Four-point arrays} imply that a single inequality of negative type $(2,2)$ or $(3,1)$ on a length space implies \emph{all} inequalities of the same type.
 
 \parit{Proof.}
 Our inequality can be written as 
@@ -337,20 +336,19 @@ This means that $\mathcal{M}_K$ consists of all length spaces.
 It remains to consider the inequalities of negative type $(2,2)$ or $(3,1)$.
 In these cases, we can assume that our $\lambda$-array is
 \[(\alpha\cdot (1-\beta),\  (1-\alpha)\cdot(1-\beta),\  \beta,\ -1)\] 
-for some $\alpha,\beta$ such that $0< \beta< 1$.
-In case of $(2,2)$-inequality, we have $1<\alpha$;
-in case of $(3,1)$-inequality, we have $0<\alpha<1$.
+for some $\alpha,\beta$ such that $0< \beta< 1$;
+in case of $(2,2)$-inequality, we have $1<\alpha$, and in case of $(3,1)$-inequality, we have $0<\alpha<1$.
 
 Consider the 4-point array $\bm{x}=(x_1,x_2,x_3,x_4)$  in the plane such that 
 \[x_4=\alpha\cdot (1-\beta)\cdot x_1+(1-\alpha)\cdot(1-\beta)\cdot x_2+\beta\cdot x_3.\]
-We can assume that the array is labeled so that it matches one of the configurations in the pictures below,
+We can assume that the array matches one of the configurations in the pictures below,
 so for $(3,1)$-inequality, point $x_4$ lies inside of the triangle $x_1x_2x_3$,
 and for $(2,2)$-inequality the segment $[x_1x_3]$ intersects $[x_2x_4]$.
 
 Note that we get equality in \ref{eq:lambda} for this array.
 Moreover, this defines a bijection between plane $\bm{x}$-arrays up to affine transformation and $\lambda$-arrays up to multiplication by a nonzero coefficient;
 as before, we assume that the $\bm{x}$-arrays are in general position --- no three of its points lie on one line.
-So we can describe our inequality by a 4-point array in general position.
+Therefore one can describe our inequality by a 4-point array in general position.
 If the points of the array lie at the vertices of a convex quadrangle,
 then it corresponds to an inequality of type $(2,2)$.
 If one of the points lies inside the triangle formed by the remaining points, then it corresponds to an inequality of type $(3,1)$.
@@ -387,8 +385,8 @@ If we sum up the first inequality for arrays $x_1,x_2,x_3,x_4$ and $x_1,x_2,x_4,
 
 By the claim, the inequality for $\lambda$-array $(\alpha\cdot (1-\beta),(1-\alpha)\cdot(1\z-\beta), \beta,-1)$ implies the inequality for the $\lambda$-array $(\alpha\cdot (1-\beta^2), (1-\alpha)\cdot(1-\beta^2), \beta^2,-1)$.
 Applying the claim several times, we get all the inequalities with $\lambda$-arrays
-\[(\alpha\cdot (1-\gamma),\  (1-\alpha)\cdot(1-\gamma),\ \gamma,\ -1)\]
-for $\gamma=\beta^{2^k}$ with any integer $k\ge 1$;
+\[(\alpha\cdot (1-\gamma),\  (1-\alpha)\cdot(1-\gamma),\ \gamma,\ -1),\]
+where $\gamma=\beta^{2^k}$ for an integer $k\ge 1$;
 in particular, we get the following inequality
 \[
 \begin{aligned}
@@ -427,7 +425,7 @@ Passing to the limit as $\gamma\to 0$ in the inequality \ref{eq:trig-inq}$\,+\,\
 %Passing to the limit as $\gamma\to 0$ in the inequality $2\cdot$\ref{eq:trig-inq}$\,+\,\tfrac1\gamma\cdot($\ref{eq:lambda-inq}$\,-\,$\ref{eq:trig-inq}$)$, we get \[ \begin{aligned} |x_3-x_4|^2&\ge (1-\alpha)\cdot|x_3-x_2|^2+\alpha\cdot x_3-x_1|^2- \\ &-(1-\alpha)\cdot |x_4-x_2|^2-\alpha\cdot|x_4-x_1|^2. \end{aligned} \eqlbl{eq:CBB-CBA'} \]
 Nonnegative or nonpositive curvature in the sense of Alexandrov can be defined via this inequality for all $\alpha\in (0,1)$ and $\alpha\in (1,\infty)$, respectively; see \cite[8.14 and 9.14]{AKP-2024}.
 So far, we have obtained it for only one value of $\alpha$;
-however, by iterating the inequality we can derive it for the remaining values.
+however, applying iteration we can derive inequalities for the remaining values $\alpha\in (0,1)$ (respectfully, $\alpha\in (1,\infty)$).
 
 More precisely, assume this inequality holds for some $\alpha\in (0,1)$, then we can change $\alpha$ to $(1-\alpha)$, $\alpha^2$,  $\alpha\cdot (1-\alpha)$, $(1-\alpha^2)$, and so on.
 Together with any value $\xi$, this set contains $1-\xi$ and $\xi^k$ for any integer $k\ge 1$.
@@ -451,8 +449,7 @@ so, Toponogov's theorem is the only nontrivial globalization theorem for quadrat
 \begin{thm}{Theorem}\label{thm:globalization}
 Suppose that the globalization holds for a closed convex cone $K\z\subset W_4$.
 Assume that the $K$-comparison is not trivial;
-that is, $\mathcal{M}_K$ does not include all length spaces.
-Also, suppose $\mathcal{M}_K$ contains a space with at least two distinct points.
+that is, on one side $\mathcal{M}_K$ does not include all length spaces, and, on the other side, $\mathcal{M}_K$ contains a space with at least two distinct points.
 Then $\mathcal{M}_K$ consists of Alexandrov spaces with nonnegative curvature.
 \end{thm}
 
@@ -468,7 +465,7 @@ for any circle $r\cdot \mathbb{S}^1$ with $r>0$, and hence also for any product 
 It remains to apply \ref{prop:Four-point arrays}.
 \qeds
 
-In the following proof, we will use a statement from the next section.
+In the following proof, we will use one statement from the next section.
 
 \parit{Proof of the theorem.}
 Let us denote by $K_0$ the cone in $W_4$ described by all inequalities of negative type $(3,1)$ and $(2,1)$.
@@ -511,7 +508,7 @@ that is, for some sequence $\delta_n\to 0^+$, we can choose corresponding inequa
 We have three options:
 \begin{enumerate}[(i)]
 \item\label{in} $\lambda_1>0$, $\lambda_2>0$, and $\lambda_3>0$;
-\item\label{side} $\lambda_i=0$ for one $i$.
+\item\label{side} $\lambda_i=0$ for one index $i$;
 \item\label{vertex} $\lambda_i=0$ for two indices $i$.
 \end{enumerate}
 
@@ -538,14 +535,17 @@ In case \ref{vertex}, we can assume that $\lambda_1=\lambda_2=0$, so $\bm{\lambd
 \[\bm{\lambda}_n=(\alpha_n\cdot(1-\beta_n),(1-\alpha_n)\cdot(1-\beta_n),\beta_n,-1),\]
 where $0<\alpha_n<1$ and $\beta_n\to 1^-$ as $n\to\infty$.
 Let us modify the corresponding inequalities defined by \ref{eq:+squares} to sweep $\bm{\lambda}_\infty$ out of the corner.
-Namely, we have that the inequality with array
+Namely, we have a sequence of $(3,1)$-inequalities with array
 \[(\alpha_n\cdot(1-\beta_n),(1-\alpha_n)\cdot(1-\beta_n),\beta_n,-1)\]
-holds with an error
+that hold with error
 \[10\cdot\delta_n^2\cdot\alpha_n\cdot(1-\beta_n)^2\cdot(1-\alpha_n)\cdot\beta_n \cdot (|x_1-x_2|_X^2+|x_2-x_3|_X^2+|x_3-x_1|_X^2).\]
-Following the calculations in \ref{clm:1=>2}, we get that inequality with array
+Following the calculations in \ref{clm:1=>2}, we will use the same inequality several times for a sequence of point arrays.
+By triangle inequality, we may assume that the error in the intermediate inequalities are at most
+\[100\cdot\delta_n^2\cdot\alpha_n\cdot(1-\beta_n)^2\cdot(1-\alpha_n)\cdot\beta_n \cdot (|x_1-x_2|_X^2+|x_2-x_3|_X^2+|x_3-x_1|_X^2).\]
+As a result we get an inequality with array
 \[(\alpha_n\cdot(1-\beta_n^{2^k}),(1-\alpha_n)\cdot(1-\beta_n^{2^k}),\beta_n^{2^k},-1)\]
 holds with an error
-\[100\cdot2^k\cdot\delta_n^2\cdot\alpha_n\cdot(1-\beta_n)^2\cdot(1-\alpha_n)\cdot\beta_n \cdot (|x_1-x_2|_X^2+|x_2-x_3|_X^2+|x_3-x_1|_X^2).\]
+\[2^k\cdot100\cdot\delta_n^2\cdot\alpha_n\cdot(1-\beta_n)^2\cdot(1-\alpha_n)\cdot\beta_n \cdot (|x_1-x_2|_X^2+|x_2-x_3|_X^2+|x_3-x_1|_X^2).\]
 Since $\beta_n\to 1^-$, we can choose $k=k(n)$ such that $k\to \infty$ as $n\to \infty$ and $\gamma^2\le \beta_n^{2^k}<\gamma$ for some fixed $0<\gamma<1$ and
 \[
 2^k\cdot\delta_n^2\cdot \alpha_n\cdot(1-\beta_n)^2\cdot(1-\alpha_n)\cdot\beta_n
@@ -557,7 +557,7 @@ That is, starting from a sequence of inequalities with $\lambda$-arrays convergi
 we have constructed another sequence of the same type with the limit $\lambda$-array covered in cases \ref{in} or \ref{side}.
 \qeds
 
-\section{Auxiliary statements}
+\section{Auxiliary statements}\label{Auxiliary statements}
 
 \begin{thm}{Lemma}\label{lem:area-bound}
 Let $(\lambda_1,\lambda_2,\lambda_3,-1)$ be the $\lambda$-array of an inequality of type $(3,1)$ and
@@ -582,12 +582,12 @@ In particular, $\tilde a^2$ is a quadratic form on $W_4$.
 \parit{Proof.}
 By the Kirszbraun theorem (see \cite{lang-schroeder,AKP-2011} or \cite[Chapter 10]{AKP-2024}), we may assume that $x_1$, $x_2$, $x_3$ and $x_4$ lie in the hyperbolic plane; moreover $x_4$ belongs to the solid hyperbolic triangle with vertices $x_1$, $x_2$ and $x_3$.
 Denote by $a$ the area of this triangle.
-
-By the Kirszbraun theorem,
+Again, by the Kirszbraun theorem,
 \[a\le \tilde a.\]
+
 Since the hyperbolic plane has curvature $-1$, we have
 \[\pi-\angk{x_1}{x_2}{x_3}_{\HH^2}-\angk{x_2}{x_3}{x_1}_{\HH^2}-\angk{x_3}{x_1}{x_2}_{\HH^2}=a.\]
-By these inequalities and the comparison, we get
+These inequalities and the comparison implies that
 \begin{align*}
 0&\le \angk{x_1}{x_2}{x_3}_{\EE^2}-\angk{x_1}{x_2}{x_3}_{\HH^2}\le \tilde a.
 \intertext{Since $x_4$ lies in the solid hyperbolic triangle with vertices $x_1$, $x_2$ and $x_3$, we also have $\angk{x_1}{x_2}{x_4}_{\HH^2}+\angk{x_1}{x_4}{x_3}_{\HH^2}=\angk{x_1}{x_2}{x_3}_{\HH^2}$. Hence, the comparison also implies}
@@ -635,6 +635,9 @@ then there is an inequality of negative type $(3,1)$ with a $\lambda$-array $(\l
 holds for any quadruple in $K$.
 \end{thm}
 
+This inequality should be interpreted as an $(3,1)$-inequality with a $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,-1)$ with error
+\[10\cdot\delta^2\cdot \lambda_1\cdot\lambda_2\cdot\lambda_3\cdot (|x_1-x_2|_X^2+|x_2-x_3|_X^2+|x_3-x_1|_X^2).\]
+
 \parit{Proof.}
 Let $\theta$ be the associated form of the 4-array in the hyperbolic space.
 Since $K$ is convex, we can choose a quadratic inequality that does not hold for $\theta$, but holds for any form in $K$.
@@ -649,7 +652,7 @@ Our inequality can be written as $\langle \omega,\rho_{\bm{x}} \rangle\ge 0$, wh
 
 Let $N\subset \SSS^2\subset V_4$ be the set of unit vectors $v$ such that $\theta(v)<0$.
 The set $N$ does not intersect the four equators $e_1$, $e_2$, $e_3$, $e_4$ parallel to the facets of $\triangle$.
-Moreover, since $K\supset K_0$, the set $N$ lies in one of triangles, say $T$;
+Moreover, since $K\supset K_0$, the set $N$ (up to sign) lies in one of triangles, say $T$;
 we can assume that equators $e_1$, $e_2$, $e_3$ are extensions of sides of $T$, and $e_4$ is the remaining equator.
 
 Since $K\supset K_0$, we have $\omega(v)\ge 0$ for any $v\in V_4$.
@@ -667,40 +670,51 @@ $\rho_{\bm{x}}(w)\ge 0$.
 Moreover, the values $\rho_{\bm{x}}(v)$ and $\rho_{\bm{x}}(w)$ depend only on sides of triangle $[x_1x_2x_3]$.
 
 Since
-\begin{align*}
+\[
+\begin{aligned}
 \langle\omega,\theta\rangle=\theta(u)+\theta(v)+\theta(w)&<0,
 &
 \theta(v)&\ge0,
-&
+&\text{and}&&
 \theta(w)&\ge0,
-\end{align*}
+\end{aligned}
+\eqlbl{eq:uvw}
+\]
 we have that $u$ points in a direction of $N$.
 Therefore, $\rho_{\bm{x}}(u)\ge0$ is an inequality of negative type $(3,1)$.
 
-Suppose that the array $(x_1,x_2,x_3,x_4)$ is equipped with a metric such that its associated form is $\theta$.
+Suppose that the array $\bm{x}=(x_1,x_2,x_3,x_4)$ is equipped with a metric such that its associated form is $\theta$.
 Let us rescale $u$, $v$, and $w$ so that the inequality $\theta(u)\ge 0$ (which as we know has negative type $(3,1)$)
 has $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,-1)$.
-Since $\delta$ is small, \ref{lem:area-bound} implies that
+Since $\delta$ is small, \ref{eq:uvw} and \ref{lem:area-bound} imply that
 \[\theta(v)+\theta(w)
 \le
 13\cdot\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\tilde a^2.\]
-Note that $\theta(v)=\eps_v\cdot \tilde d_v^2$ and $\theta(w)=\eps_w\cdot \tilde d_w^2$, where
-$\tilde d_v$ and $\tilde d_w$ are distances from a vertex of the model triangle $\tilde\triangle(x_1x_2x_3)_{\EE^2}$ to a point that divides the opposite side in a certain ratio and $\eps_v,\eps_w\ge 0$,
-Since the diameter of $\tilde\triangle(x_1x_2x_3)$ is at most $\delta$,
-\begin{align*}
-\tilde a&\le \delta\cdot \tilde d_v/2,
-\\
-\tilde a&\le \delta\cdot \tilde d_w/2.
-\end{align*}
-Hence $\eps_v+\eps_w\le \tfrac{13}4\cdot \delta^2\cdot\lambda_1\cdot\lambda_2\cdot\lambda_3$.
-Furthermore, each value $\tilde d_v$ and $\tilde d_w$ does not exceed the maximal side of $[x_1x_2x_3]$ --- hence the result.
+
+For general array $\bm{x}=(x_1,x_2,x_3,x_4)$, we have
+\[\rho_{\bm{x}}(v)=\eps_v\cdot \tilde d_v^2
+\quad\text{and}\quad
+ \rho_{\bm{x}}(w)=\eps_w\cdot \tilde d_w^2,
+\]
+where
+$\tilde d_v$ and $\tilde d_w$ are distances from a vertex of the model triangle $\tilde\triangle(x_1x_2x_3)_{\EE^2}$ to a point on the opposite side that divides it in a certain ratio and $\eps_v,\eps_w\ge 0$.
+
+In particular, for our choice of $\bm{x}$ it implies $\theta(v)=\eps_v\cdot \tilde d_v^2$ and $\theta(w)=\eps_w\cdot \tilde d_w^2$
+Since the diameter of $\tilde\triangle(x_1x_2x_3)$ is at most $\delta$, we have
+$\tilde a\le \delta\cdot \tilde d_v/2$ and
+$\tilde a\le \delta\cdot \tilde d_w/2$.
+Hence
+\[\eps_v+\eps_w\le \tfrac{13}4\cdot \delta^2\cdot\lambda_1\cdot\lambda_2\cdot\lambda_3.\]
+
+Note that for general 4-point array, $\tilde d_v$ and $\tilde d_w$ do not exceed the maximal side of the triangle $x_1x_2x_3$ --- hence the result.
 \qeds
 
 \section{Remarks}
 
-The requirement that the cone $K$ is closed in \ref{thm:globalization} is necessary;
-without it, the globalization holds for the cone described by inequality
-\[|x_1-x_2|^2+|x_1-x_3|^2+|x_2-x_3|^2<4\cdot(|x_1-x_4|^2+|x_2-x_4|^2+|x_3-x_4|^2).\]
+The requirement made in \ref{thm:globalization} that the cone $K$ is closed is necessary;
+without it, the globalization holds for the cone described by the inequality
+\[|x_1-x_2|^2+|x_1-x_3|^2+|x_2-x_3|^2<4\cdot(|x_1-x_4|^2+|x_2-x_4|^2+|x_3-x_4|^2),\]
+assuming that the right-hand side is positive.
 To verify this statement, note that the inequality forbids tripods.
 
 It would be super-nice to find a quadratic inequality for $n$-point arrays with globalization that is not implied by the standard globalization theorem.
@@ -711,7 +725,7 @@ for simply connected spaces, which includes the Cartan--Hadamard theorem.
 For general (closed) conditions on semimetrics on $n$-point arrays, globalization holds of course for curvature bounded below by $\kappa\in \RR$ in the sense of Alexandrov,
 but it holds for other conditions as well;
 the set of semimetrics on $4$-point arrays that are embeddable in $r\cdot\SSS^1$ for any $r>0$ gives an example.
-Understanding globalization phenomena in such general settings seems to be out of reach at the moment.
+Therefore, understanding globalization phenomena in such general settings is even more interesting.
 
 {\sloppy
 \def\emph{\textit}
